fix wordlist header wrapping when loading

--- a/client/src/assets/main.scss
+++ b/client/src/assets/main.scss
@@ -154,7 +154,8 @@ canvas {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  max-width: 200px;
+  text-align: left;
+  flex: 1 1 0;
 }
 
 .emptyGraph {
